// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CNavGroup customize 1`] = `
<div>
  <li
    class="nav-group show bazinga"
  >
    <a
      aria-expanded="true"
      class="nav-link nav-group-toggle"
      href="#"
    >
      anchorText
    </a>
    <ul
      class="nav-group-items"
      style="height: 0px; display: block;"
    />
  </li>
</div>
`;

exports[`loads and displays CNavGroup component 1`] = `
<div>
  <li
    class="nav-group"
  >
    <a
      aria-expanded="false"
      class="nav-link nav-group-toggle"
      href="#"
    >
      anchorText
    </a>
    <ul
      class="nav-group-items"
      style="height: 0px;"
    />
  </li>
</div>
`;
